[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
blake3 = { path = "patches/blake3" }
block-buffer = { path = "patches/block-buffer" }
cmov = { path = "patches/cmov" }
constant_time_eq = { path = "patches/constant_time_eq" }
cpufeatures = { path = "patches/cpufeatures" }
crypto-common = { path = "patches/crypto-common" }
ctutils = { path = "patches/ctutils" }
digest = { path = "patches/digest" }
hashbrown = { path = "patches/hashbrown" }
hybrid-array = { path = "patches/hybrid-array" }
indexmap = { path = "patches/indexmap" }
wit-bindgen = { path = "patches/wit-bindgen" }
